# NeuralNetFromScratch

./: README.md  VanillaNN.ipynb  activations.py  layer.py  loss.py  metrics.py  model.py  pyproject.toml
nnfs/: examples.py  model.py  optimizers.py
